Spring boot resttemplate fixes