@@ -1,17 +1,16 @@
-package com.cube.interceptor.spring.egress;
+package io.cube.spring.egress;
 
 import java.io.IOException;
 import java.net.URI;
 import java.net.URISyntaxException;
+import java.util.Arrays;
 import java.util.List;
-import java.util.Map;
 
 import javax.ws.rs.core.MultivaluedHashMap;
 import javax.ws.rs.core.MultivaluedMap;
 
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
-import org.apache.logging.log4j.message.ObjectMessage;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpRequest;
 import org.springframework.http.client.ClientHttpRequestExecution;
@@ -20,12 +19,12 @@ import org.springframework.http.client.ClientHttpResponse;
 import org.springframework.http.client.support.HttpRequestWrapper;
 
 import io.cube.agent.CommonConfig;
-import io.md.constants.Constants;
 import io.md.utils.CommonUtils;
 
 public class RestTemplateMockInterceptor implements ClientHttpRequestInterceptor {
 
-	private static final Logger LOGGER = LogManager.getLogger(RestTemplateMockInterceptor.class);
+	private static final Logger LOGGER = LoggerFactory
+		.getLogger(RestTemplateMockInterceptor.class);
 
 	@Override
 	public ClientHttpResponse intercept(HttpRequest httpRequest, byte[] bytes,
@@ -37,20 +36,19 @@ public class RestTemplateMockInterceptor implements ClientHttpRequestInterceptor
 		try {
 			newRequest = commonConfig.getMockingURI(originalUri, serviceName).map(mockURI -> {
 				MyHttpRequestWrapper request = new MyHttpRequestWrapper(httpRequest, mockURI);
-				commonConfig.authToken.ifPresentOrElse(auth -> {
-					MultivaluedMap<String, String> clientHeaders = Utils
-						.getMultiMap(httpRequest.getHeaders().entrySet());
-					request.putHeader(io.cube.agent.Constants.AUTHORIZATION_HEADER, List.of(auth));
-				}, () -> {
-					LOGGER.info("Auth token not present for Mocking service");
+				commonConfig.authToken.ifPresent(auth -> {
+					request.putHeader(io.cube.agent.Constants.AUTHORIZATION_HEADER, Arrays.asList(auth));
 				});
+
+				if (!commonConfig.authToken.isPresent()) {
+					LOGGER.info("Auth token not present for Mocking service");
+				}
 
 				return request;
 			}).orElse(null);
+
 		} catch (URISyntaxException e) {
-			LOGGER.error(new ObjectMessage(
-				Map.of(Constants.MESSAGE, "Mocking filter issue, exception during setting URI!",
-					Constants.EXCEPTION_STACK, e.getMessage())));
+			LOGGER.error("Mocking filter issue, exception during setting URI!", e);
 			return execution.execute(httpRequest, bytes);
 		}
 		return execution.execute(newRequest, bytes);
